// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GhostPropertiesPanel renders 1`] = `
<div
  className="c-ghost-properties-panel"
>
  <div
    className="c-properties-panel__header-wrapper"
  >
    <div
      className="c-view-header"
    >
      <h2
        className="c-view-header__title"
      >
        Vehicles
      </h2>
      <button
        aria-label="Close"
        className="c-close-button c-close-button--x-large c-close-button--light"
        onClick={[MockFunction]}
      >
        <span
          aria-hidden={true}
          aria-label=""
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
          role="img"
        />
      </button>
    </div>
    <div
      className="c-properties-panel__header"
    >
      <div
        className="c-properties-panel__label"
      >
        <svg
          role="img"
          style={
            {
              "height": 64,
              "width": 64,
            }
          }
          viewBox="-32 -20 64 64"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="c-vehicle-icon c-vehicle-icon--large ghost early-red"
          >
            <rect
              className="c-vehicle-icon__label-background"
              height={24}
              rx={12}
              ry={12}
              width={64}
              x={-32}
              y={19}
            />
            <text
              className="c-vehicle-icon__label c-vehicle-icon__label--normal"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={31}
            >
              0123
            </text>
            <g
              transform="scale(0.7) translate(-24,-23)"
            >
              <path
                className="c-vehicle-icon__ghost-highlight"
                d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                strokeLinejoin="round"
              />
              <path
                className="c-vehicle-icon__ghost-body"
                d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                strokeLinejoin="round"
              />
            </g>
            <text
              className="c-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={8}
            >
              X
            </text>
          </g>
        </svg>
      </div>
      <div
        className="c-properties-panel__variant"
      >
        <div
          className="c-properties-panel__inbound-outbound"
        >
          Outbound
        </div>
        <output
          aria-label="Route Variant Name"
          className="c-route-variant-name"
        >
          <output
            aria-label="Route & Variant"
            className="c-route-variant-name__route-id"
          >
            39_X
          </output>
          <span>
             
          </span>
          <output
            aria-label="Headsign"
            className="c-route-variant-name__headsign"
          >
            headsign
          </output>
        </output>
      </div>
      <div
        className="c-properties-panel__ping-container"
      />
    </div>
    <ul
      className="c-tabs__tab-list"
      role="tablist"
    >
      <li
        className="c-tabs__tab c-tabs__tab--selected"
      >
        <button
          aria-selected={true}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="c-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="c-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="c-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Status
        </button>
      </li>
      <li
        className="c-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="c-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="c-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="c-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Run
        </button>
      </li>
      <li
        className="c-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="c-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="c-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="c-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Block
        </button>
      </li>
    </ul>
  </div>
  <div
    className="c-tabs__tab-panel"
  >
    <div
      className="c-ghost-properties-panel__notes"
    >
      <div
        aria-labelledby="card-label-:r0:"
        className="c-card c-card--lemon c-block-waiver-banner c-block-waiver-banner--unknown c-card--no-focus-or-hover c-card--inactive"
      >
        <div
          className="c-card__left"
        >
          <div
            className="c-card__left-content"
          >
            <div
              className="c-card__top-row"
            >
              <div
                className="c-card__title"
                id="card-label-:r0:"
              >
                <h3
                  className="c-block-waiver-banner__title"
                >
                  Unknown Ghost Bus
                </h3>
                <div
                  className="c-block-waiver-banner__badge c-block-waiver-banner__badge--unknown"
                >
                  <span
                    dangerouslySetInnerHTML={
                      {
                        "__html": "<svg/>",
                      }
                    }
                  />
                  Ghost
                </div>
              </div>
            </div>
            <div
              className="c-card__contents"
            >
              <div
                className="c-card__body"
              >
                A ghost bus or dropped trip has been automatically detected on this route but no reason has been logged yet. Once a dispatcher generates a note, it will appear here.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c-properties-list"
    >
      <table
        className="c-properties-list__table"
      >
        <tbody>
          <tr
            className="c-properties-list__property "
          >
            <td
              className="c-properties-list__property-label"
            >
              Run
            </td>
            <td
              className="c-properties-list__property-value"
            >
              123-0123
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`GhostPropertiesPanel renders ghost with block waivers 1`] = `
<div
  className="c-ghost-properties-panel"
>
  <div
    className="c-properties-panel__header-wrapper"
  >
    <div
      className="c-view-header"
    >
      <h2
        className="c-view-header__title"
      >
        Vehicles
      </h2>
      <button
        aria-label="Close"
        className="c-close-button c-close-button--x-large c-close-button--light"
        onClick={[MockFunction]}
      >
        <span
          aria-hidden={true}
          aria-label=""
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
          role="img"
        />
      </button>
    </div>
    <div
      className="c-properties-panel__header"
    >
      <div
        className="c-properties-panel__label"
      >
        <svg
          role="img"
          style={
            {
              "height": 64,
              "width": 64,
            }
          }
          viewBox="-32 -20 64 64"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="c-vehicle-icon c-vehicle-icon--large ghost early-red"
          >
            <rect
              className="c-vehicle-icon__label-background"
              height={24}
              rx={12}
              ry={12}
              width={64}
              x={-32}
              y={19}
            />
            <text
              className="c-vehicle-icon__label c-vehicle-icon__label--normal"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={31}
            >
              0123
            </text>
            <g
              transform="scale(0.7) translate(-24,-23)"
            >
              <path
                className="c-vehicle-icon__ghost-highlight"
                d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                strokeLinejoin="round"
              />
              <path
                className="c-vehicle-icon__ghost-body"
                d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                strokeLinejoin="round"
              />
            </g>
            <text
              className="c-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={8}
            >
              X
            </text>
          </g>
        </svg>
      </div>
      <div
        className="c-properties-panel__variant"
      >
        <div
          className="c-properties-panel__inbound-outbound"
        />
        <output
          aria-label="Route Variant Name"
          className="c-route-variant-name"
        >
          <output
            aria-label="Route & Variant"
            className="c-route-variant-name__route-id"
          >
            39_X
          </output>
          <span>
             
          </span>
          <output
            aria-label="Headsign"
            className="c-route-variant-name__headsign"
          >
            headsign
          </output>
        </output>
      </div>
      <div
        className="c-properties-panel__ping-container"
      />
    </div>
    <ul
      className="c-tabs__tab-list"
      role="tablist"
    >
      <li
        className="c-tabs__tab c-tabs__tab--selected"
      >
        <button
          aria-selected={true}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="c-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="c-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="c-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Status
        </button>
      </li>
      <li
        className="c-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="c-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="c-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="c-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Run
        </button>
      </li>
      <li
        className="c-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="c-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="c-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="c-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Block
        </button>
      </li>
    </ul>
  </div>
  <div
    className="c-tabs__tab-panel"
  >
    <div
      className="c-ghost-properties-panel__notes"
    >
      <div
        className="c-block-waiver-list"
      >
        <div
          aria-labelledby="card-label-:r2:"
          className="c-card c-card--kiwi c-block-waiver-banner c-block-waiver-banner--past c-card--no-focus-or-hover c-card--inactive"
        >
          <div
            className="c-card__left"
          >
            <div
              className="c-card__left-content"
            >
              <div
                className="c-card__top-row"
              >
                <div
                  className="c-card__title"
                  id="card-label-:r2:"
                >
                  <h3
                    className="c-block-waiver-banner__title"
                  >
                    Dispatcher Note
                  </h3>
                  <div
                    className="c-block-waiver-banner__badge c-block-waiver-banner__badge--past"
                  >
                    Past
                  </div>
                </div>
              </div>
              <div
                className="c-card__contents"
              >
                <div
                  className="c-card__body"
                >
                  <div
                    className="c-properties-list"
                  >
                    <table
                      className="c-properties-list__table"
                    >
                      <tbody>
                        <tr
                          className="c-properties-list__property "
                        >
                          <td
                            className="c-properties-list__property-label"
                          >
                            Reason
                          </td>
                          <td
                            className="c-properties-list__property-value"
                          >
                            Block Waiver
                          </td>
                        </tr>
                        <tr
                          className="c-properties-list__property "
                        >
                          <td
                            className="c-properties-list__property-label"
                          >
                            Start Time
                          </td>
                          <td
                            className="c-properties-list__property-value"
                          >
                            5:05 AM
                          </td>
                        </tr>
                        <tr
                          className="c-properties-list__property "
                        >
                          <td
                            className="c-properties-list__property-label"
                          >
                            End Time
                          </td>
                          <td
                            className="c-properties-list__property-value"
                          >
                            12:38 PM
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c-properties-list"
    >
      <table
        className="c-properties-list__table"
      >
        <tbody>
          <tr
            className="c-properties-list__property "
          >
            <td
              className="c-properties-list__property-label"
            >
              Run
            </td>
            <td
              className="c-properties-list__property-value"
            >
              123-0123
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`GhostPropertiesPanel renders ghost with missing run 1`] = `
<div
  className="c-ghost-properties-panel"
>
  <div
    className="c-properties-panel__header-wrapper"
  >
    <div
      className="c-view-header"
    >
      <h2
        className="c-view-header__title"
      >
        Vehicles
      </h2>
      <button
        aria-label="Close"
        className="c-close-button c-close-button--x-large c-close-button--light"
        onClick={[MockFunction]}
      >
        <span
          aria-hidden={true}
          aria-label=""
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
          role="img"
        />
      </button>
    </div>
    <div
      className="c-properties-panel__header"
    >
      <div
        className="c-properties-panel__label"
      >
        <svg
          role="img"
          style={
            {
              "height": 64,
              "width": 64,
            }
          }
          viewBox="-32 -20 64 64"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="c-vehicle-icon c-vehicle-icon--large ghost early-red"
          >
            <rect
              className="c-vehicle-icon__label-background"
              height={24}
              rx={12}
              ry={12}
              width={64}
              x={-32}
              y={19}
            />
            <text
              className="c-vehicle-icon__label c-vehicle-icon__label--normal"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={31}
            >
              N/A
            </text>
            <g
              transform="scale(0.7) translate(-24,-23)"
            >
              <path
                className="c-vehicle-icon__ghost-highlight"
                d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                strokeLinejoin="round"
              />
              <path
                className="c-vehicle-icon__ghost-body"
                d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                strokeLinejoin="round"
              />
            </g>
            <text
              className="c-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={8}
            >
              X
            </text>
          </g>
        </svg>
      </div>
      <div
        className="c-properties-panel__variant"
      >
        <div
          className="c-properties-panel__inbound-outbound"
        >
          Outbound
        </div>
        <output
          aria-label="Route Variant Name"
          className="c-route-variant-name"
        >
          <output
            aria-label="Route & Variant"
            className="c-route-variant-name__route-id"
          >
            39_X
          </output>
          <span>
             
          </span>
          <output
            aria-label="Headsign"
            className="c-route-variant-name__headsign"
          >
            headsign
          </output>
        </output>
      </div>
      <div
        className="c-properties-panel__ping-container"
      />
    </div>
    <ul
      className="c-tabs__tab-list"
      role="tablist"
    >
      <li
        className="c-tabs__tab c-tabs__tab--selected"
      >
        <button
          aria-selected={true}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="c-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="c-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="c-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Status
        </button>
      </li>
      <li
        className="c-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="c-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="c-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="c-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Run
        </button>
      </li>
      <li
        className="c-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="c-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="c-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="c-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Block
        </button>
      </li>
    </ul>
  </div>
  <div
    className="c-tabs__tab-panel"
  >
    <div
      className="c-ghost-properties-panel__notes"
    >
      <div
        aria-labelledby="card-label-:r1:"
        className="c-card c-card--lemon c-block-waiver-banner c-block-waiver-banner--unknown c-card--no-focus-or-hover c-card--inactive"
      >
        <div
          className="c-card__left"
        >
          <div
            className="c-card__left-content"
          >
            <div
              className="c-card__top-row"
            >
              <div
                className="c-card__title"
                id="card-label-:r1:"
              >
                <h3
                  className="c-block-waiver-banner__title"
                >
                  Unknown Ghost Bus
                </h3>
                <div
                  className="c-block-waiver-banner__badge c-block-waiver-banner__badge--unknown"
                >
                  <span
                    dangerouslySetInnerHTML={
                      {
                        "__html": "<svg/>",
                      }
                    }
                  />
                  Ghost
                </div>
              </div>
            </div>
            <div
              className="c-card__contents"
            >
              <div
                className="c-card__body"
              >
                A ghost bus or dropped trip has been automatically detected on this route but no reason has been logged yet. Once a dispatcher generates a note, it will appear here.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c-properties-list"
    >
      <table
        className="c-properties-list__table"
      >
        <tbody>
          <tr
            className="c-properties-list__property "
          >
            <td
              className="c-properties-list__property-label"
            >
              Run
            </td>
            <td
              className="c-properties-list__property-value"
            >
              Not Available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
